Fixed up float for menu & about

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <img class="nav-close" src="images/nav-icon-close.svg" alt="Close Navigation">
       </label>
       <ul class="nav">
-        <li><a href="">Menu</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Catering</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#catering">Catering</a></li>
+        <li><a href="#events">Events</a></li>
+        <li><a href="#hours">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -34,51 +35,27 @@
       <h2><span class="banner-title">Finally, a place that caters to you.</span></h2>
       <p>Come on over and take a break</p>
       <div class="button">
-        <a class="btn btn-small" href="#">View Menu</a>
+        <a class="btn" href="#menu">View Menu</a>
       </div>
     </div>
   </div>
 
-  <section class="link-cards">
-    <div class="card-1">
-      <div class="link-content-1">
-        <a href="">Variety of Options</a>
-      </div>
-    </div>
-
-    <div class="card-2">
-      <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
-      <div class="link-content-2">
-        <a href="">We Cater!</a>
-      </div>
-    </div>
-
-    <div class="card-3">
-      <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
-      <div class="link-content-3">
-        <a href="">View Upcoming Events</a>
-      </div>
-    </div>
-
-    <div class="card-4">
-    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
-    </div>
-  </section>
-
   <section class="menu">
-    <h2>Menu</h2>
-    <img src="images/placeholder-4by3.svg" alt="">
-    <p>We offer a variety of different options throughout the week, ranging from different cuisines. Fresh, convenient grab-and-go meals made with all natural ingredients. Breakfast, lunch and dinner options – everything you need to eat healthy all day long. Taste our hand-crafted pizza made with all-natural ingredients, our signature hearty red sauce and quattro fromaggio blend cheese. Stop in for a sweet treat. Wholesome baked goods delivered daily and never frozen, including our signature muffin in six different flavours. Everything on the menu is $5 and under guaranteed!</p>
+    <h2 id="menu">Menu</h2>
+    <img src="images/placeholder-3by2.svg" alt="">
+    <p>We offer a variety of different options throughout the week, ranging from different cuisines. Fresh, convenient grab-and-go meals made with all natural ingredients. Breakfast, lunch and dinner options – everything you need to eat healthy all day long.</p>
+    <p>Taste our hand-crafted pizza made with all-natural ingredients, our signature hearty red sauce and quattro fromaggio blend cheese. Stop in for a sweet treat. Wholesome baked goods delivered daily and never frozen, including our signature muffin in six different flavours. Everything on the menu is $5 and under guaranteed!</p>
   </section>
 
   <section class="about">
-    <h2>About</h2>
-    <img src="images/placeholder-4by3.svg" alt="">
-    <p>At 25th Street Market Cafe, it's the little things that are important to us – from the way we buy our food to the wholesome way we prepare it. We make it easy to enjoy good food without compromising on quality, choice or convenience. Make sure to try all of our signature recipes – a creative collection of unique and delicious food offerings.</p>
+    <h2 id="about">About</h2>
+    <img src="images/placeholder-3by2.svg" alt="">
+    <p>At 25th Street Market Cafe, it's the little things that are important to us – from the way we buy our food to the wholesome way we prepare it.</p>
+    <p>We make it easy to enjoy good food without compromising on quality, choice or convenience. Make sure to try all of our signature recipes – a creative collection of unique and delicious food offerings.</p>
   </section>
 
   <section class="catering">
-    <h2>Catering</h2>
+    <h2 id="catering">Catering</h2>
 
     <div class="step-1">
       <img src="images/placeholder-circle.svg" alt="">
@@ -97,13 +74,13 @@
 
     <div class="step-4">
       <img src="images/placeholder-circle.svg" alt="">
-      <p>View the menu options by downloading our catering menu.</p>
+      <p>Your goods should be well on it's way for you event!</p>
     </div>
 
   </section>
 
   <section class="events">
-    <h2>Upcoming Events</h2>
+    <h2 id="events">Upcoming Events</h2>
 
       <div class="taco-night">
         <img src="images/placeholder-4by3.svg" alt="">
@@ -126,24 +103,25 @@
 
   <footer>
     <div class="hours">
-    <h2>Hours</h2>
+    <h3 id="hours">Hours</h3>
     <p>Monday-Friday 7am-12pm</p>
-    <p>Saturday 8am-1am</p><br>
-    <p>Crestview - Meadowlands, Ottawa, ON</p><br>
-    <p>E-mail: 35thstreetmarketcafe@algonquin.com</p>
+    <p>Saturday 8am-1am</p>
     </div>
+
+    <div class="map">
+      <h3>Location</h3>
+      <p>Crestview - Meadowlands, Ottawa, ON</p>
+      <img src="images/placeholder-3by2.svg" alt="">
+    </div>
+
+    <p>E-mail: 35thstreetmarketcafe@algonquin.com</p>
+        <span class="hiring">We're Hiring! Send us an e-mail or come visit us in-store</span>
 
     <div class="social-media">
       <img src="images/placeholder-circle.svg" alt="">
       <img src="images/placeholder-circle.svg" alt="">
       <img src="images/placeholder-circle.svg" alt="">
     </div>
-
-    <div class="map">
-      <img src="" alt="">
-    </div>
-
-    <span class="hiring">We're Hiring! Send us an e-mail or come visit us</span>
 
     <p><small>35th Street Market Cafe. All Rights Reserved.</small></p>
   </footer>
