Styled the footer

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
     </div>
   </div>
 
+  <div class="cards">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+    <div class="contents">
+    </div>
+  </div>
+
   <section class="menu">
     <h2 id="menu">Menu</h2>
     <img src="images/placeholder-3by2.svg" alt="">
@@ -69,7 +75,8 @@
 
     <div class="step-3">
       <img src="images/placeholder-circle.svg" alt="">
-      <p>Wait for the e-mailed confirmation on your order.<br>Will take up to 24 hours.</p>
+      <p>Wait for the e-mailed confirmation on your order.</p>
+      <p>Will take up to 24 hours.</p>
     </div>
 
     <div class="step-4">
@@ -104,8 +111,9 @@
   <footer>
     <div class="hours">
     <h3 id="hours">Hours</h3>
-    <p>Monday-Friday 7am-12pm</p>
-    <p>Saturday 8am-1am</p>
+    <p>Monday-Friday: 7am-12pm</br>Saturday: 8am-1am</p>
+    <p>E-mail: 35thstreetmarketcafe@algonquin.com</p>
+    <span class="hiring">We're Hiring!<br> Send us an e-mail or apply in-store.</span>
     </div>
 
     <div class="map">
@@ -114,16 +122,16 @@
       <img src="images/placeholder-3by2.svg" alt="">
     </div>
 
-    <p>E-mail: 35thstreetmarketcafe@algonquin.com</p>
-        <span class="hiring">We're Hiring! Send us an e-mail or come visit us in-store</span>
 
     <div class="social-media">
-      <img src="images/placeholder-circle.svg" alt="">
-      <img src="images/placeholder-circle.svg" alt="">
-      <img src="images/placeholder-circle.svg" alt="">
+      <a href=""><img src="images/placeholder-circle.svg" alt="Facebook"></a>
+      <a href=""><img src="images/placeholder-circle.svg" alt="Twitter"></a>
+      <a href=""><img src="images/placeholder-circle.svg" alt="Instagram"></a>
     </div>
 
-    <p><small>35th Street Market Cafe. All Rights Reserved.</small></p>
+    <div class="disclaimer">
+      <p><small>35th Street Market Cafe. All Rights Reserved.</small></p>
+    </div>
   </footer>
 
 </body>
