added the link cards

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+<main>
   <header>
     <img src="images/placeholder-circle.svg" alt="">
     <h1>35th Street Market Cafe</h1>
@@ -40,11 +40,29 @@
     </div>
   </div>
 
-  <div class="cards">
-    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
-    <div class="contents">
+  <section class="cards">
+    <div class="card-1">
+    <a href="#menu"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
+    <div class="card-content-1">
+      <p>Variety of Healthy Choices<p>
     </div>
   </div>
+
+    <div class="card-2">
+    <a href="#catering"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
+    <div class="card-content-1">
+      <p>We Cater!<p>
+    </div>
+  </div>
+
+    <div class="card-3">
+    <a href="#events"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
+    <div class="card-content-1">
+      <p>View Upcoming Events<p>
+    </div>
+  </div>
+
+</section>
 
   <section class="menu">
     <h2 id="menu">Menu</h2>
@@ -111,7 +129,7 @@
   <footer>
     <div class="hours">
     <h3 id="hours">Hours</h3>
-    <p>Monday-Friday: 7am-12pm</br>Saturday: 8am-1am</p>
+    <p>Monday-Friday: 7am-12pm<br>Saturday: 8am-1am</p>
     <p>E-mail: 35thstreetmarketcafe@algonquin.com</p>
     <span class="hiring">We're Hiring!<br> Send us an e-mail or apply in-store.</span>
     </div>
@@ -119,9 +137,8 @@
     <div class="map">
       <h3>Location</h3>
       <p>Crestview - Meadowlands, Ottawa, ON</p>
-      <img src="images/placeholder-3by2.svg" alt="">
+      <img src="images/placeholder-16by9.svg" alt="">
     </div>
-
 
     <div class="social-media">
       <a href=""><img src="images/placeholder-circle.svg" alt="Facebook"></a>
@@ -134,5 +151,6 @@
     </div>
   </footer>
 
+</main>
 </body>
 </html>
