fixed up indentation

--- a/index.html
+++ b/index.html
@@ -8,104 +8,104 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<main>
-  <header>
-    <img src="images/placeholder-circle.svg" alt="">
-    <h1>35th Street Market Cafe</h1>
+  <main>
+    <header>
+      <img src="images/placeholder-circle.svg" alt="">
+      <h1>35th Street Market Cafe</h1>
 
-    <nav>
-      <input type="checkbox" class="nav-check" id="nav-check">
-      <label class="nav-label" for="nav-check">
-        <img class="nav-open" src="images/nav-icon.svg" alt="Open Navigation">
-        <img class="nav-close" src="images/nav-icon-close.svg" alt="Close Navigation">
-      </label>
-      <ul class="nav">
-        <li><a href="#menu">Menu</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#catering">Catering</a></li>
-        <li><a href="#events">Events</a></li>
-        <li><a href="#hours">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+      <nav>
+        <input type="checkbox" class="nav-check" id="nav-check">
+        <label class="nav-label" for="nav-check">
+          <img class="nav-open" src="images/nav-icon.svg" alt="Open Navigation">
+          <img class="nav-close" src="images/nav-icon-close.svg" alt="Close Navigation">
+        </label>
+        <ul class="nav">
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#catering">Catering</a></li>
+          <li><a href="#events">Events</a></li>
+          <li><a href="#hours">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <div class="banner">
-    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
-    <div class="contents">
-      <h2><span class="banner-title">Finally, a place that caters to you.</span></h2>
-      <p>Come on over and take a break</p>
-      <div class="button">
-        <a class="btn" href="#menu">View Menu</a>
+    <div class="banner">
+      <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+      <div class="contents">
+        <h2><span class="banner-title">Finally, a place that caters to you.</span></h2>
+        <p>Come on over and take a break</p>
+        <div class="button">
+          <a class="btn" href="#menu">View Menu</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <section class="cards">
-    <div class="card-1">
-    <a href="#menu"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
-    <div class="card-content-1">
-      <p>Variety of Healthy Choices<p>
-    </div>
-  </div>
+    <section class="cards">
+      <div class="card-1">
+        <a href="#menu"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
+        <div class="card-content-1">
+          <p>Variety of Healthy Choices</p>
+        </div>
+      </div>
 
-    <div class="card-2">
-    <a href="#catering"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
-    <div class="card-content-1">
-      <p>We Cater!<p>
-    </div>
-  </div>
+      <div class="card-2">
+        <a href="#catering"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
+        <div class="card-content-1">
+          <p>We Cater!</p>
+        </div>
+      </div>
 
-    <div class="card-3">
-    <a href="#events"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
-    <div class="card-content-1">
-      <p>View Upcoming Events<p>
-    </div>
-  </div>
+      <div class="card-3">
+        <a href="#events"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
+        <div class="card-content-1">
+          <p>View Upcoming Events</p>
+        </div>
+      </div>
 
-</section>
+    </section>
 
-  <section class="menu">
-    <h2 id="menu">Menu</h2>
-    <img src="images/placeholder-3by2.svg" alt="">
-    <p>We offer a variety of different options throughout the week, ranging from different cuisines. Fresh, convenient grab-and-go meals made with all natural ingredients. Breakfast, lunch and dinner options – everything you need to eat healthy all day long.</p>
-    <p>Taste our hand-crafted pizza made with all-natural ingredients, our signature hearty red sauce and quattro fromaggio blend cheese. Stop in for a sweet treat. Wholesome baked goods delivered daily and never frozen, including our signature muffin in six different flavours. Everything on the menu is $5 and under guaranteed!</p>
-  </section>
+    <section class="menu">
+      <h2 id="menu">Menu</h2>
+      <img src="images/placeholder-3by2.svg" alt="">
+      <p>We offer a variety of different options throughout the week, ranging from different cuisines. Fresh, convenient grab-and-go meals made with all natural ingredients. Breakfast, lunch and dinner options – everything you need to eat healthy all day long.</p>
+      <p>Taste our hand-crafted pizza made with all-natural ingredients, our signature hearty red sauce and quattro fromaggio blend cheese. Stop in for a sweet treat. Wholesome baked goods delivered daily and never frozen, including our signature muffin in six different flavours. Everything on the menu is $5 and under guaranteed!</p>
+    </section>
 
-  <section class="about">
-    <h2 id="about">About</h2>
-    <img src="images/placeholder-3by2.svg" alt="">
-    <p>At 25th Street Market Cafe, it's the little things that are important to us – from the way we buy our food to the wholesome way we prepare it.</p>
-    <p>We make it easy to enjoy good food without compromising on quality, choice or convenience. Make sure to try all of our signature recipes – a creative collection of unique and delicious food offerings.</p>
-  </section>
+    <section class="about">
+      <h2 id="about">About</h2>
+      <img src="images/placeholder-3by2.svg" alt="">
+      <p>At 25th Street Market Cafe, it's the little things that are important to us – from the way we buy our food to the wholesome way we prepare it.</p>
+      <p>We make it easy to enjoy good food without compromising on quality, choice or convenience. Make sure to try all of our signature recipes – a creative collection of unique and delicious food offerings.</p>
+    </section>
 
-  <section class="catering">
-    <h2 id="catering">Catering</h2>
+    <section class="catering">
+      <h2 id="catering">Catering</h2>
 
-    <div class="step-1">
-      <img src="images/placeholder-circle.svg" alt="">
-      <p>View the menu options by downloading our catering menu.</p>
-    </div>
+      <div class="step-1">
+        <img src="images/placeholder-circle.svg" alt="">
+        <p>View the menu options by downloading our catering menu.</p>
+      </div>
 
-    <div class="step-2">
-      <img src="images/placeholder-circle.svg" alt="">
-      <p>Please contact us via e-mail or telephone to place an order.</p>
-    </div>
+      <div class="step-2">
+        <img src="images/placeholder-circle.svg" alt="">
+        <p>Please contact us via e-mail or telephone to place an order.</p>
+      </div>
 
-    <div class="step-3">
-      <img src="images/placeholder-circle.svg" alt="">
-      <p>Wait for the e-mailed confirmation on your order.</p>
-      <p>Will take up to 24 hours.</p>
-    </div>
+      <div class="step-3">
+        <img src="images/placeholder-circle.svg" alt="">
+        <p>Wait for the e-mailed confirmation on your order.</p>
+        <p>Will take up to 24 hours.</p>
+      </div>
 
-    <div class="step-4">
-      <img src="images/placeholder-circle.svg" alt="">
-      <p>Your goods should be well on it's way for you event!</p>
-    </div>
+      <div class="step-4">
+        <img src="images/placeholder-circle.svg" alt="">
+        <p>Your goods should be well on it's way for you event!</p>
+      </div>
 
-  </section>
+    </section>
 
-  <section class="events">
-    <h2 id="events">Upcoming Events</h2>
+    <section class="events">
+      <h2 id="events">Upcoming Events</h2>
 
       <div class="taco-night">
         <img src="images/placeholder-4by3.svg" alt="">
@@ -124,33 +124,33 @@
         <h3>Eggroll Party</h3>
         <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
       </div>
-  </section>
+    </section>
 
-  <footer>
-    <div class="hours">
-    <h3 id="hours">Hours</h3>
-    <p>Monday-Friday: 7am-12pm<br>Saturday: 8am-1am</p>
-    <p>E-mail: 35thstreetmarketcafe@algonquin.com</p>
-    <span class="hiring">We're Hiring!<br> Send us an e-mail or apply in-store.</span>
-    </div>
+    <footer>
+      <div class="hours">
+        <h3 id="hours">Hours</h3>
+        <p>Monday-Friday: 7am-12pm<br>Saturday: 8am-1am</p>
+        <p>E-mail: 35thstreetmarketcafe@algonquin.com</p>
+        <span class="hiring">We're Hiring!<br> Send us an e-mail or apply in-store.</span>
+      </div>
 
-    <div class="map">
-      <h3>Location</h3>
-      <p>Crestview - Meadowlands, Ottawa, ON</p>
-      <img src="images/placeholder-16by9.svg" alt="">
-    </div>
+      <div class="map">
+        <h3>Location</h3>
+        <p>Crestview - Meadowlands, Ottawa, ON</p>
+        <img src="images/placeholder-16by9.svg" alt="">
+      </div>
 
-    <div class="social-media">
-      <a href=""><img src="images/placeholder-circle.svg" alt="Facebook"></a>
-      <a href=""><img src="images/placeholder-circle.svg" alt="Twitter"></a>
-      <a href=""><img src="images/placeholder-circle.svg" alt="Instagram"></a>
-    </div>
+      <div class="social-media">
+        <a href=""><img src="images/placeholder-circle.svg" alt="Facebook"></a>
+        <a href=""><img src="images/placeholder-circle.svg" alt="Twitter"></a>
+        <a href=""><img src="images/placeholder-circle.svg" alt="Instagram"></a>
+      </div>
 
-    <div class="disclaimer">
-      <p><small>35th Street Market Cafe. All Rights Reserved.</small></p>
-    </div>
-  </footer>
+      <div class="disclaimer">
+        <p><small>35th Street Market Cafe. All Rights Reserved.</small></p>
+      </div>
+    </footer>
 
-</main>
+  </main>
 </body>
 </html>
