added a google font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>35th Street Market Cafe</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Gilda+Display:400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
