added dates for the events
used span

--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
 
       <div class="taco-night">
         <img src="images/placeholder-4by3.svg" alt="">
-        <h3>Taco Night</h3>
+        <h3><span class="date">Jan 1</span>Taco Night</h3>
         <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
       </div>
 
       <div class="fish-chips">
         <img src="images/placeholder-4by3.svg" alt="">
-        <h3>Fish & Chips</h3>
+        <h3><span class="date">Feb 2</span>Fish & Chips</h3>
         <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
       </div>
 
       <div class="egg-roll">
         <img src="images/placeholder-4by3.svg" alt="">
-        <h3>Eggroll Party</h3>
+        <h3><span class="date">Mar 3</span>Eggroll Party</h3>
         <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
       </div>
     </section>
