adjusted the padding + margin for the footer

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <div class="step-1">
         <img src="images/placeholder-circle.svg" alt="">
         <p>View the menu options by downloading our catering menu.</p>
+          <a class="btn" href="">Catering Menu</a>
       </div>
 
       <div class="step-2">
@@ -131,7 +132,7 @@
         <h3 id="hours">Hours</h3>
         <p>Monday-Friday: 7am-12pm<br>Saturday: 8am-1am</p>
         <p>E-mail: 35thstreetmarketcafe@algonquin.com</p>
-        <span class="hiring">We're Hiring!<br> Send us an e-mail or apply in-store.</span>
+        <p>We're Hiring!<br> Send us an e-mail or apply in-store.</p>
       </div>
 
       <div class="map">
