--- a/index.html
+++ b/index.html
@@ -110,20 +110,20 @@
 
       <div class="taco-night">
         <img src="images/placeholder-4by3.svg" alt="">
-        <h3><span class="date">Jan 1</span>Taco Night</h3>
-        <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+        <div class="date">Jan 1</div><h3>Taco Night</h3>
+        <p>Dive into some delicious street food. Try our signature tacos and more!</p>
       </div>
 
       <div class="fish-chips">
         <img src="images/placeholder-4by3.svg" alt="">
-        <h3><span class="date">Feb 2</span>Fish & Chips</h3>
-        <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+        <div class="date">Feb 2</div><h3>Fish & Chips</h3>
+        <p>Fresh crispy fish with a side of even more crispier chips.</p>
       </div>
 
       <div class="egg-roll">
         <img src="images/placeholder-4by3.svg" alt="">
-        <h3><span class="date">Mar 3</span>Eggroll Party</h3>
-        <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+        <div class="date">Mar 3</div><h3>Eggroll Party</h3>
+        <p>Come join us with our freshly prepared egg rolls with a multitude of fillings for all.</p>
       </div>
     </section>
 
