adjusted padding + margins

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="step-1">
         <img src="images/placeholder-circle.svg" alt="">
         <p>View the menu options by downloading our catering menu.</p>
-          <a class="btn" href="">Catering Menu</a>
+        <a class="btn" href="">Catering Menu</a>
       </div>
 
       <div class="step-2">
@@ -110,19 +110,22 @@
 
       <div class="taco-night">
         <img src="images/placeholder-4by3.svg" alt="">
-        <div class="date">Jan 1</div><h3>Taco Night</h3>
+        <div class="date">Jan 1</div>
+        <h3>Taco Night</h3>
         <p>Dive into some delicious street food. Try our signature tacos and more!</p>
       </div>
 
       <div class="fish-chips">
         <img src="images/placeholder-4by3.svg" alt="">
-        <div class="date">Feb 2</div><h3>Fish & Chips</h3>
+        <div class="date">Feb 2</div>
+        <h3>Fish & Chips</h3>
         <p>Fresh crispy fish with a side of even more crispier chips.</p>
       </div>
 
       <div class="egg-roll">
         <img src="images/placeholder-4by3.svg" alt="">
-        <div class="date">Mar 3</div><h3>Eggroll Party</h3>
+        <div class="date">Mar 3</div>
+        <h3>Eggroll Party</h3>
         <p>Come join us with our freshly prepared egg rolls with a multitude of fillings for all.</p>
       </div>
     </section>
