Fixed up the events section
added the dates on top of the image using positon

--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
       <div class="step-1">
         <img src="images/placeholder-circle.svg" alt="">
         <p>View the menu options by downloading our catering menu.</p>
-        <a class="btn" href="">Catering Menu</a>
       </div>
 
       <div class="step-2">
@@ -95,7 +94,7 @@
       <div class="step-3">
         <img src="images/placeholder-circle.svg" alt="">
         <p>Wait for the e-mailed confirmation on your order.</p>
-        <p>Will take up to 24 hours.</p>
+        <p>Note: Will take up to 24 hours.</p>
       </div>
 
       <div class="step-4">
@@ -109,7 +108,7 @@
       <h2 id="events">Upcoming Events</h2>
 
       <div class="taco-night">
-        <img src="images/placeholder-4by3.svg" alt="">
+          <img src="images/placeholder-4by3.svg" alt="">
         <div class="date">Jan 1</div>
         <h3>Taco Night</h3>
         <p>Dive into some delicious street food. Try our signature tacos and more!</p>
@@ -141,7 +140,7 @@
       <div class="map">
         <h3>Location</h3>
         <p>Crestview - Meadowlands, Ottawa, ON</p>
-        <img src="images/placeholder-16by9.svg" alt="">
+        <img src="images/placeholder-3by1.svg" alt="">
       </div>
 
       <div class="social-media">
