fixed up toggle menu .svg

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <h2 id="about">About</h2>
       <img src="images/placeholder-3by2.svg" alt="">
       <p>At 25th Street Market Cafe, it's the little things that are important to us – from the way we buy our food to the wholesome way we prepare it.</p>
+      <p>We want you to think of us as your local place to gather for good food and good conversation. Breakfast, Lunch, and dinner, where good comes together.</p>
       <p>We make it easy to enjoy good food without compromising on quality, choice or convenience. Make sure to try all of our signature recipes – a creative collection of unique and delicious food offerings.</p>
     </section>
 
