--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>35th Street Market Cafe</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Gilda+Display:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Raleway:400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -44,21 +44,21 @@
       <div class="card-1">
         <a href="#menu"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
         <div class="card-content-1">
-          <p>Variety of Healthy Choices</p>
+          <h3>Variety of Healthy Choices</h3>
         </div>
       </div>
 
       <div class="card-2">
         <a href="#catering"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
         <div class="card-content-1">
-          <p>We Cater!</p>
+          <h3>We Cater!</h3>
         </div>
       </div>
 
       <div class="card-3">
         <a href="#events"><img src="images/placeholder-16by9.svg" alt="Facebook"></a>
         <div class="card-content-1">
-          <p>View Upcoming Events</p>
+          <h3>View Upcoming Events</h3>
         </div>
       </div>
 
