fixed up the size of my image for the smallest viewport

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </header>
 
     <div class="banner">
+      <img class="img-flex" src="images/placeholder-2by3.svg" alt="">
       <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
       <div class="contents">
         <h2><span class="banner-title">Finally, a place that caters to you.</span></h2>
