Finally figured out how to reveal the navbar at the largest viewport :D

--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
       </div>
 
       <div class="social-media">
-        <a href=""><img src="images/placeholder-circle.svg" alt="Facebook"></a>
-        <a href=""><img src="images/placeholder-circle.svg" alt="Twitter"></a>
-        <a href=""><img src="images/placeholder-circle.svg" alt="Instagram"></a>
+        <a href="https://facebook.com"><img src="images/placeholder-circle.svg" alt="Facebook"></a>
+        <a href="https://twitter.com"><img src="images/placeholder-circle.svg" alt="Twitter"></a>
+        <a href="https://instagram.com"><img src="images/placeholder-circle.svg" alt="Instagram"></a>
       </div>
 
       <div class="disclaimer">
-        <p><small>35th Street Market Cafe. All Rights Reserved.</small></p>
+        <p><small>2016. © 35th Street Market Cafe. All Rights Reserved.</small></p>
       </div>
     </footer>
 
