Properly changed the images depending on viewport size

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="step-3">
         <img src="images/placeholder-circle.svg" alt="">
         <p>Wait for the e-mailed confirmation on your order.</p>
-        <p>Note: Will take up to 24 hours.</p>
+        <p class="small-text"><i>Note: Will take up to 24 hours.</i></p>
       </div>
 
       <div class="step-4">
